src/test/deca/context/invalid/without_class/incompatible_type_op_modulo_float_float.deca
// Description:
//    Error modulo operator with float
//
// Result:
//     INCOMPATIBLE_TYPE_OPERATOR: Type float is incompatible with type float for the operator %
//     line 11

{
    float x = 2.0;
    float y = 8.8;
    int z = x % y;
}